# agent-demo

./: .env.example  .gitignore  AI_PROMPT_LOG.md  PROBLEMS.md  README.md  prompt.md  pyproject.toml
config/: config.example.yaml
doc/: architecture-questions.md
examples/: basic_usage.py  cli.py  multi_session_demo.py
src/agent/: __init__.py  agent.py  compression.py  config.py  exceptions.py  loop.py  models.py  persistence.py  session.py  tokens.py  trace.py
src/agent/llm/: __init__.py  base.py  deepseek.py
src/agent/tools/: __init__.py  base.py
src/agent/tools/builtin/: calculator.py  search.py  todo.py
tests/: test_agent.py  test_compression.py  test_config.py  test_exceptions.py  test_integration.py  test_llm.py  test_loop.py  test_models.py  test_persistence.py  test_session.py  test_tokens.py  test_tools_base.py  test_tools_builtin.py  test_trace.py
