[project]
name = "agent-demo"
version = "0.1.0"
description = "从零构建的最小可用 AI Agent，无框架依赖"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: integration tests that require API keys",
]

[tool.ruff]
line-length = 100
